--- a/public/style.css
+++ b/public/style.css
@@ -14,6 +14,15 @@ html, body {
   width: 100%;
   height: 100%;
   font-size: 12px;
+  /* display: none; */
+}
+
+canvas {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
 }
 
 #messages div {
@@ -23,7 +32,7 @@ html, body {
 #caret {
   position: absolute;
   width: 3px;
-  height: 15px;
+  height: 30px;
 }
 
 #current {
